@@ -1426,3 +1426,4 @@
 - Win32: Fixed a few compiler warnings, suggested by Zell (#0002890).
 - Moved a couple isatty() calls to DEBUGMODE (#0002945).
 - Made win32 compile again, reported by Bock (#0003106).
+- Cutoff webtv whois at MAXTARGETS (#0003004).
